--- a/mia/Views/Discovery/Header/HXDiscoveryHeader.xib
+++ b/mia/Views/Discovery/Header/HXDiscoveryHeader.xib
@@ -3,39 +3,52 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXDiscoveryHeader"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6d-0x-mkR">
-                    <rect key="frame" x="12" y="30" width="44" height="30"/>
-                    <state key="normal" title="Profile"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P6d-0x-mkR">
+                    <rect key="frame" x="14" y="29" width="25" height="25"/>
+                    <state key="normal" image="D-ShareIcon"/>
                     <connections>
                         <action selector="profileButtonPressed" destination="-1" eventType="touchUpInside" id="oOo-IB-wOZ"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYU-eQ-zAf">
-                    <rect key="frame" x="268" y="30" width="40" height="30"/>
-                    <state key="normal" title="Share"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NYU-eQ-zAf">
+                    <rect key="frame" x="281" y="29" width="25" height="25"/>
+                    <state key="normal" image="D-MuisIcon"/>
                     <connections>
                         <action selector="shareButtonPressed" destination="-1" eventType="touchUpInside" id="Nnc-Z9-Q9m"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="发现" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lPU-Je-cXV">
+                    <rect key="frame" x="145" y="33" width="30" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="NYU-eQ-zAf" secondAttribute="trailing" constant="12" id="Eik-bX-F7a"/>
-                <constraint firstAttribute="bottom" secondItem="P6d-0x-mkR" secondAttribute="bottom" constant="10" id="IBt-JZ-nVs"/>
-                <constraint firstItem="NYU-eQ-zAf" firstAttribute="centerY" secondItem="P6d-0x-mkR" secondAttribute="centerY" id="hGF-Nt-igd"/>
-                <constraint firstItem="P6d-0x-mkR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="12" id="yEa-2Y-6uJ"/>
+                <constraint firstAttribute="trailing" secondItem="NYU-eQ-zAf" secondAttribute="trailing" constant="14" id="Eik-bX-F7a"/>
+                <constraint firstItem="NYU-eQ-zAf" firstAttribute="centerY" secondItem="lPU-Je-cXV" secondAttribute="centerY" id="Pis-Nx-aVS"/>
+                <constraint firstItem="P6d-0x-mkR" firstAttribute="centerY" secondItem="lPU-Je-cXV" secondAttribute="centerY" id="gHq-SS-DPS"/>
+                <constraint firstItem="lPU-Je-cXV" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" multiplier="1.3" id="xOT-A4-tgO"/>
+                <constraint firstItem="P6d-0x-mkR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="14" id="yEa-2Y-6uJ"/>
+                <constraint firstItem="lPU-Je-cXV" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="znS-QZ-IFq"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="344" y="322"/>
         </view>
     </objects>
+    <resources>
+        <image name="D-MuisIcon" width="25" height="25"/>
+        <image name="D-ShareIcon" width="25" height="25"/>
+    </resources>
 </document>
