--- a/mia/Views/Discovery/Content/Cover/HXDiscoveryCover.xib
+++ b/mia/Views/Discovery/Content/Cover/HXDiscoveryCover.xib
@@ -10,6 +10,7 @@
             <connections>
                 <outlet property="cardUserAvatar" destination="QUd-EQ-JaH" id="k9q-gR-x5Y"/>
                 <outlet property="cardUserLabel" destination="Bf7-hc-ci7" id="MKT-ZX-uil"/>
+                <outlet property="cardUserView" destination="8sl-fo-mRt" id="VqD-yI-zYA"/>
                 <outlet property="cover" destination="2U2-sO-h5F" id="XTg-7c-IKv"/>
                 <outlet property="singerNameLabel" destination="wQu-4t-emA" id="rPu-cb-maa"/>
                 <outlet property="songNameLabel" destination="RM3-0g-IQ9" id="Qnd-iP-gyJ"/>
@@ -26,20 +27,8 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="D-MaskBG" translatesAutoresizingMaskIntoConstraints="NO" id="IqH-MH-7nG" userLabel="Mask View">
                     <rect key="frame" x="0.0" y="0.0" width="260" height="260"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌曲名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RM3-0g-IQ9" userLabel="歌曲名">
-                    <rect key="frame" x="15" y="194" width="230" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="表演者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQu-4t-emA" userLabel="表演者">
-                    <rect key="frame" x="15" y="225" width="230" height="20"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8sl-fo-mRt" userLabel="卡片分享者信息">
-                    <rect key="frame" x="8" y="8" width="119" height="40"/>
+                    <rect key="frame" x="18" y="18" width="119" height="40"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hNs-kT-Qq0" userLabel="昵称" customClass="HXIBLabel">
                             <rect key="frame" x="26" y="9" width="93" height="22"/>
@@ -97,13 +86,25 @@
                     <rect key="frame" x="113" y="112" width="35" height="35"/>
                     <state key="normal" image="M-PlayIcon"/>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="歌曲名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RM3-0g-IQ9" userLabel="歌曲名">
+                    <rect key="frame" x="18" y="193" width="224" height="26"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="表演者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wQu-4t-emA" userLabel="表演者">
+                    <rect key="frame" x="18" y="225" width="224" height="20"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="0.86274509799999999" green="0.86274509799999999" blue="0.86274509799999999" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="UBP-ye-QIy" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="3gT-4j-7Hc"/>
-                <constraint firstAttribute="trailing" secondItem="wQu-4t-emA" secondAttribute="trailing" constant="15" id="6ju-ZO-cHV"/>
+                <constraint firstAttribute="trailing" secondItem="wQu-4t-emA" secondAttribute="trailing" constant="18" id="6ju-ZO-cHV"/>
                 <constraint firstAttribute="bottom" secondItem="wQu-4t-emA" secondAttribute="bottom" constant="15" id="9Rx-1x-HMh"/>
-                <constraint firstItem="wQu-4t-emA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="FBf-gh-bw9"/>
+                <constraint firstItem="wQu-4t-emA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="18" id="FBf-gh-bw9"/>
                 <constraint firstItem="IqH-MH-7nG" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Jag-aY-GmH"/>
                 <constraint firstItem="IqH-MH-7nG" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="PAD-7g-5DE"/>
                 <constraint firstAttribute="trailing" secondItem="2U2-sO-h5F" secondAttribute="trailing" id="R53-hK-lBe"/>
@@ -112,12 +113,12 @@
                 <constraint firstAttribute="bottom" secondItem="2U2-sO-h5F" secondAttribute="bottom" id="Zos-Qy-QGt"/>
                 <constraint firstItem="UBP-ye-QIy" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="fta-DO-L4f"/>
                 <constraint firstItem="2U2-sO-h5F" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fz4-RM-3aH"/>
-                <constraint firstItem="8sl-fo-mRt" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="h18-H3-uQD"/>
+                <constraint firstItem="8sl-fo-mRt" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="18" id="h18-H3-uQD"/>
                 <constraint firstAttribute="bottom" secondItem="IqH-MH-7nG" secondAttribute="bottom" id="h3U-dI-D0a"/>
-                <constraint firstItem="wQu-4t-emA" firstAttribute="top" secondItem="RM3-0g-IQ9" secondAttribute="bottom" constant="10" id="iTk-e8-1M1"/>
+                <constraint firstItem="wQu-4t-emA" firstAttribute="top" secondItem="RM3-0g-IQ9" secondAttribute="bottom" constant="6" id="iTk-e8-1M1"/>
                 <constraint firstAttribute="trailing" secondItem="IqH-MH-7nG" secondAttribute="trailing" id="jaj-TX-Ofn"/>
                 <constraint firstItem="RM3-0g-IQ9" firstAttribute="leading" secondItem="wQu-4t-emA" secondAttribute="leading" id="p7Y-rP-btX"/>
-                <constraint firstItem="8sl-fo-mRt" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="ptV-Ri-jti"/>
+                <constraint firstItem="8sl-fo-mRt" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="18" id="ptV-Ri-jti"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
