--- a/mia/Views/Common/HXInfectListView/HXInfectListCell.xib
+++ b/mia/Views/Common/HXInfectListView/HXInfectListCell.xib
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXInfectUserListCell" rowHeight="81" id="TIo-vP-lHy" customClass="HXInfectUserListCell">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="HXInfectListCell" rowHeight="81" id="TIo-vP-lHy" customClass="HXInfectListCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="81"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="TIo-vP-lHy" id="Ivf-pj-x2E">
@@ -18,28 +17,24 @@
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xmb-UV-xMm">
                         <rect key="frame" x="30" y="12" width="56" height="56"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="xmb-UV-xMm" secondAttribute="height" multiplier="1:1" id="xQh-bz-J3j"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享者" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jaa-tB-u67">
                         <rect key="frame" x="102" y="16" width="210" height="21"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="分享着动态" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7W6-5E-Eld">
                         <rect key="frame" x="175" y="43" width="137" height="21"/>
-                        <animations/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.50196078430000002" green="0.50196078430000002" blue="0.50196078430000002" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="最近分享:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNT-fG-ie7">
                         <rect key="frame" x="102" y="43" width="73" height="21"/>
-                        <animations/>
                         <constraints>
                             <constraint firstAttribute="width" constant="73" id="YVI-cK-KjH"/>
                         </constraints>
@@ -48,7 +43,6 @@
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="xmb-UV-xMm" firstAttribute="top" secondItem="Ivf-pj-x2E" secondAttribute="top" constant="12" id="2Hq-Yr-GtB"/>
                     <constraint firstItem="Jaa-tB-u67" firstAttribute="bottom" secondItem="xmb-UV-xMm" secondAttribute="centerY" constant="-3" id="8Ce-Dl-aH1"/>
@@ -63,7 +57,6 @@
                     <constraint firstAttribute="trailing" secondItem="Jaa-tB-u67" secondAttribute="trailing" constant="8" id="zdF-zQ-Eue"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="dynamicLabel" destination="7W6-5E-Eld" id="L1P-hc-iA0"/>
                 <outlet property="header" destination="xmb-UV-xMm" id="lsl-oT-zbr"/>
