修复【发现】卡片秒推头像圆角问题

--- a/mia/Views/Common/HXInfectView/HXInfectCell.xib
+++ b/mia/Views/Common/HXInfectView/HXInfectCell.xib
@@ -14,7 +14,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mlF-5F-6Yo" customClass="HXIBImageView">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mlF-5F-6Yo" customClass="HXIBImageView">
                         <rect key="frame" x="0.0" y="0.0" width="32" height="32"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
