--- a/mia/Views/Play/BottomBar/HXPlayBottomBar.xib
+++ b/mia/Views/Play/BottomBar/HXPlayBottomBar.xib
@@ -10,6 +10,11 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HXPlayBottomBar">
             <connections>
                 <outlet property="containerView" destination="iN0-l3-epB" id="T4P-tq-Bgn"/>
+                <outlet property="favoriteButton" destination="Brz-V5-BDW" id="vA5-Hj-hik"/>
+                <outlet property="infectButton" destination="2eI-cX-yfV" id="SdU-w7-Ns3"/>
+                <outlet property="nextButton" destination="Hdq-TX-gVP" id="x7e-fL-cT7"/>
+                <outlet property="pauseButton" destination="eRt-O0-d3C" id="Chk-Wb-kFI"/>
+                <outlet property="previousButton" destination="Bgc-qM-UEV" id="cL9-gE-xQX"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -28,10 +33,16 @@
                                 <constraint firstAttribute="height" constant="40" id="t0j-LP-sEK"/>
                             </constraints>
                             <state key="normal" image="P-FavoriteIcon"/>
+                            <connections>
+                                <action selector="favoriteButtonPressed" destination="-1" eventType="touchUpInside" id="Cdf-4F-mbo"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bgc-qM-UEV" userLabel="Previous Button">
                             <rect key="frame" x="76" y="20" width="40" height="40"/>
                             <state key="normal" image="P-PreviousIcon-E"/>
+                            <connections>
+                                <action selector="previousButtonPressed" destination="-1" eventType="touchUpInside" id="NS0-Tf-mwR"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eRt-O0-d3C" userLabel="Play Button">
                             <rect key="frame" x="140" y="20" width="40" height="40"/>
@@ -40,10 +51,16 @@
                                 <constraint firstAttribute="width" secondItem="eRt-O0-d3C" secondAttribute="height" multiplier="1:1" id="CqK-21-q3v"/>
                             </constraints>
                             <state key="normal" image="P-PauseIcon"/>
+                            <connections>
+                                <action selector="pauseButtonPressed" destination="-1" eventType="touchUpInside" id="cfg-X7-sJ1"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hdq-TX-gVP" userLabel="Next Button">
                             <rect key="frame" x="204" y="20" width="40" height="40"/>
                             <state key="normal" image="P-NextIcon-E"/>
+                            <connections>
+                                <action selector="nextButtonPressed" destination="-1" eventType="touchUpInside" id="ZIN-qD-BK7"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eI-cX-yfV" userLabel="Infect Button">
                             <rect key="frame" x="280" y="20" width="40" height="40"/>
@@ -52,6 +69,9 @@
                                 <constraint firstAttribute="width" constant="40" id="38T-e7-9tf"/>
                             </constraints>
                             <state key="normal" image="P-InfectIcon"/>
+                            <connections>
+                                <action selector="infectButtonPressed" destination="-1" eventType="touchUpInside" id="tjB-BX-Nff"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
